CS_PROD_20150209_01/Metadata/unpackaged/objects/Case.object
<CustomObject>
    <fields>
        <fullName>List_ID__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>List ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDW_ID__c</fullName>
        <description>Created by LM on 5/28/2014 for Phase2 (for Michael Nadler)</description>
        <label>MDW ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapping_Term__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Mapping Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Key_Term__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Matched Key Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_ID__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Media ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_Subtypes__c</fullName>
        <description>Created by LM on 5/28/2014 for Phase2 (for Michael Nadler)</description>
        <label>Metadata Subtypes</label>
        <picklist>
            <picklistValues>
                <fullName>Reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pub Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Missed_Hit__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Missed Hit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitor_Analyze_Options__c</fullName>
        <description>Created by LM on 1/24/2014 for Phase2</description>
        <label>Monitor/Analyze Options</label>
        <picklist>
            <picklistValues>
                <fullName>Analyze Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automated Toning - Requires CGA approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast (Filtered) - Requires RRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast (Unfiltered)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eNews Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eNews NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eNews Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Top Tier Blogs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_ID__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Monitoring ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Services_to_Check__c</fullName>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Monitoring Services to Check</label>
        <picklist>
            <picklistValues>
                <fullName>Burrelles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexis</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Nielsen_Data__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Nielsen Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Notify Sales?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_of_Users_Trained__c</fullName>
        <description>Created by LM on 12/9/2013 for Phase2</description>
        <label>Num of Users Trained</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Items__c</fullName>
        <description>Added by LM on 5/28/2014 for Phase2; for Michael Nadler</description>
        <label>Number of Items</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sorts__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Number of Sorts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Subscriptions_Agents__c</fullName>
        <description>Created by LM on 9/17/2013 for Phase 2 rollout</description>
        <label>Number of Subscriptions/Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Subscriptions__c</fullName>
        <description>Created by LM on 5/28/2014 for Phase2 (for Michael Nadler)</description>
        <label>Number of Subscriptions</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Users_Affected__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Number of Users Affected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Number of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Operating System</label>
        <picklist>
            <picklistValues>
                <fullName>Mac OS9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac OS9 &amp; OSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac OSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unix/Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows &amp; Mac OS9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows &amp; Mac OSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 95/98</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows XP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Opportunity Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>Created by LM on 12/9/2013 for Phase2</description>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal (Paid Extension)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Sales_Support_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Name__c</fullName>
        <description>Created by LM on 5/28/2014 for Phase2 (for Michael Nadler)</description>
        <label>Order Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orion_Subtypes__c</fullName>
        <description>Created by LM on 5/28/2014 for Phase2 (for Michael Nadler)</description>
        <label>Orion Subtypes</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTP Setup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Teams_Involved__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Other Teams Involved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlet__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Outlet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 10/16/2013 for Phase 2 rollout</description>
        <label>Parent Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Connect_Options__c</fullName>
        <description>Created by LM on 9/17/2013 for Phase 2 rollout</description>
        <label>Plan/Connect Options</label>
        <picklist>
            <picklistValues>
                <fullName>Content Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Package (Global)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Package (INTL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Package (NA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Profiles</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Player_Error__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Player Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Service__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Product/Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Created by LM on 12/9/2013 for Phase2</description>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>CisionPoint: Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CisionPoint: Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CisionPoint: Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CisionPoint: Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cision Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products_being_sold__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Products being sold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Title__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Program Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Created by LM on 5/28/2014 for Phase2 (for Michael Nadler)</description>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Publication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Number__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>QC Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Created by LM on 12/9/2013 for Phase2</description>
        <label>Reason - At Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Objection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Threat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (See Notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Due_Date__c</fullName>
        <formula>Opportunity__r.Renewal_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Rep_Email__c</fullName>
        <label>Renewal Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Renewal_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Add_Ons__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Report Add Ons</label>
        <picklist>
            <picklistValues>
                <fullName>Table of Contents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Numbers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coverage Page</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Report_Charts__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Report Charts</label>
        <picklist>
            <picklistValues>
                <fullName>Frequency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Mix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pub Value of Media Mix</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Report_Description__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Report Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Display_Settings__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Report Display Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Due_Date__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Title__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Report Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_to_SSG_Date__c</fullName>
        <description>Added by LM on 2/6/2014 for Phase2 Rollout.</description>
        <label>Route to SSG Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Route_to_SSG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/6/2014 for Phase2 Rollout.</description>
        <label>Route to SSG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSG_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added by LM on 2/6/2014 for Phase2</description>
        <label>SSG Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SSG_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 12/9/2013 for Phase2</description>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TrainingCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Agent__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Search Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Terms__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Search Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Desk_Resolution__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Service Desk Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Entered into DevTrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irresolvable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kicked-Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Desk_Ticket_Number__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Service Desk Ticket Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_for_Quote__c</fullName>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Services for Quote</label>
        <picklist>
            <picklistValues>
                <fullName>eNews Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eNews w/ LexisNexis NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eNews w/ LexisNexis Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_to_be_included_in_the_report__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Services to be included in the report</label>
        <picklist>
            <picklistValues>
                <fullName>eNews Web NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eNews Web Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LexisNexis NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LexisNexis Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Top Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Services_to_be_trained_on__c</fullName>
        <description>Created by LM on 3/4/2014 for Phase2</description>
        <label>Services to be trained on</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cision Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Created by LM on 5/29/2014 for Phase2 (for Michael Nadler)</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>WISE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moreover</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>Created by LM on 12/9/2013 for Phase2</description>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Station</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Steps_to_Reproduce__c</fullName>
        <description>Added by LM on 2/6/2014 for Phase2 Rollout.</description>
        <label>Steps to Reproduce</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Steps_to_recreate_if_error__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Steps to recreate (if error)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 9/30/2013 for Phase 2 rollout</description>
        <inlineHelpText>Related Account to the Case.  For example, the Agency&apos;s Client or vice-versa.</inlineHelpText>
        <label>Sub Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sub Account on Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Topic__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Sub Topic</label>
        <picklist>
            <controllingField>Topic__c</controllingField>
            <picklistValues>
                <fullName>10 day check-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 day check-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 day check-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 month check-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 day check-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Slow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backsearch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Browser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BurrellesLuce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Mention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copyright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtesy Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP Build Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP Build Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit/Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firewall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <inlineHelpText>test help</inlineHelpText>
        <label>Subscription Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Subscription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Created by LM on 9/9/2013 for Phase 2 rollout</description>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topic_Profile__c</fullName>
        <description>Created by LM on 5/28/2014 for Phase2 (for Michael Nadler)</description>
        <label>Topic/Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Extension_Days__c</fullName>
        <formula>Extension_End_Date__c - Opportunity__r.Renewal_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Extension Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trial_Days__c</fullName>
        <formula>Trial_End_Date__c - Trial_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Trial Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trial_Extension_Days__c</fullName>
        <formula>Extension_End_Date__c - Extension_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Trial Extension Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>